All TabPages are active, first step

--- a/AnimalTracker/client/src/App.css
+++ b/AnimalTracker/client/src/App.css
@@ -27,6 +27,11 @@
 .App-link {
   color: #61dafb;
 }
+/* Delete Icon by class name */
+.trash-icon{
+  height: 5%;
+  width: 5%;
+  }
 
 @keyframes App-logo-spin {
   from {
